feat: add integration subscriber newsletter

--- a/src/index.html
+++ b/src/index.html
@@ -596,9 +596,9 @@
             <form class="newsletter">
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label sr-only">Email</label>
-                <input class="input newsletter__input" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <input id="input-newsletter-subscriber-email" class="input newsletter__input" type="email" placeholder="exemplo@gmail.com">
               </div>
-              <button class="btn btn-primary newsletter__btn">Inscreve-se</button>
+              <button id="btn-newsletter-subscriber-submit" class="btn btn-primary newsletter__btn" type="button">Inscreve-se <span class="icon-spinner mx-2 d-none"></span></button>
             </form>
           </div>
         </div>
